changed the theme from a file cabinet to a workout log

--- a/app/views/docs/index.html.haml
+++ b/app/views/docs/index.html.haml
@@ -9,5 +9,5 @@
 						%p.content= truncate(doc.content, length:50)
 		- else
 			%h2 Create Doc!
-			%p Start Creating Documents and Organizing your life!
+			%p Start Logging your workout to help keep you on track!
 			%button= link_to "Create Doc", new_doc_path
