--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,14 +1,14 @@
 !!!
 %html
 %head
-  %title FileCabinet | Your Life's work!
+  %title Workouts | Keep track of your workout!
   = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
   = javascript_include_tag 'application', 'data-turbolinks-track' => true
   = csrf_meta_tags
 %body
   %header
     .header_inner
-      = link_to "FileCabinet", root_path, id: "logo"
+      = link_to "Workouts", root_path, id: "logo"
 
       %nav
         - if user_signed_in?
