--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,7 +1,7 @@
 #banner
 	.banner_content
-		%h1 File Cabinet
-		%p Your Life's work. Organized, always.
+		%h1 Workouts
+		%p Your workouts. Organized, always.
 		%button= link_to "Enter", new_user_registration_path
 
 #callouts
